<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="title_activity_search_settings">SearchSettingsActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>

    <!-- Search Settings Activity Resources -->
    <string name="image_size_label">Image Size</string>

    <string-array name="image_size_array">
        <item/>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string name="color_filter_label">Color Filter</string>

    <string-array name="color_filter_array">
        <item/>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string name="type_label">Type</string>

    <string-array name="type_array">
        <item/>
        <item>faces</item>
        <item>photos</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string name="site_label">Site</string>
    <string name="site_prompt">www.disneyland.com</string>
    <string name="save_label">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
