<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="week2assignment.codepath.gridimagesearch.Activites.SearchSettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_options"
        android:id="@+id/tvAdvancedSearchOptions"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_label"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvAdvancedSearchOptions"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="50dp"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_below="@+id/tvAdvancedSearchOptions"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:entries="@array/image_size_array"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter_label"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="50dp"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spColorFilter"
        android:layout_below="@+id/spImageSize"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignStart="@+id/spImageSize"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignRight="@+id/spImageSize"
        android:layout_alignEnd="@+id/spImageSize"
        android:spinnerMode="dropdown"
        android:entries="@array/color_filter_array"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_label"
        android:id="@+id/tvType"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="50dp"
        android:gravity="center_vertical"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spType"
        android:layout_below="@+id/spColorFilter"
        android:layout_alignLeft="@+id/spColorFilter"
        android:layout_alignStart="@+id/spColorFilter"
        android:layout_alignBottom="@+id/tvType"
        android:layout_alignRight="@+id/spColorFilter"
        android:layout_alignEnd="@+id/spColorFilter"
        android:spinnerMode="dropdown"
        android:entries="@array/type_array"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_label"
        android:id="@+id/tvSite"
        android:layout_below="@+id/tvType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minHeight="50dp"
        android:gravity="center_vertical"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_below="@+id/spType"
        android:layout_alignLeft="@+id/spType"
        android:layout_alignStart="@+id/spType"
        android:layout_alignBottom="@+id/tvSite"
        android:layout_alignRight="@+id/spType"
        android:layout_alignEnd="@+id/spType"
        android:hint="@string/site_prompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_label"
        android:id="@+id/btnSave"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:onClick="saveOptions"/>

</RelativeLayout>
